--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Poppins:wght@400;600;700&family=Roboto:wght@700&family=Work+Sans:wght@500;600;700&display=swap");
+
 :root {
   font-size: 10px;
   --text-color: #ffffff;
@@ -297,7 +299,7 @@ h1 {
 .skills-text {
   width: 95%;
   margin-top: 30px;
-  margin-bottom: 63px;
+  /* margin-bottom: 63px; */
   overflow: hidden;
   font-weight: 400;
   font-size: 16px;
@@ -350,8 +352,9 @@ h1 {
 .works-link {
   display: flex;
   justify-content: space-between;
+
   margin: 30px auto 48px;
-  width: 55%;
+  width: 58%;
 }
 
 .works-btn1 {
@@ -363,7 +366,6 @@ h1 {
   padding: 5px 20px;
   border-radius: 3px;
   border: none;
-  padding: 5px 20px;
   color: var(--text-color);
   background-color: var(--body-background-color);
   font-weight: 600;
